--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,22 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+
+    <color name="placeholder_grey">#777777</color>
+
+    <color name="dark">#ff212121</color>
+    <color name="evenDarker">#ff1a1a1a</color>
+    <color name="accent">#ff00BCD4</color>
+
+    <color name="toolbarBackgroundColor">@color/evenDarker</color>
+    <color name="toolbarUrlBoxColor">#333333</color>
+    <color name="toolbarSuggestionForeground">@color/dark</color>
+    <color name="toolbarSuggestionBackground">@color/accent</color>
+
+    <color name="icons">#ffffffff</color>
+
+    <!-- Overriding color of tab counter icon in toolbar -->
+    <color name="mozac_ui_tabcounter_default_tint">@color/icons</color>
+
 </resources>
