--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -25,4 +25,16 @@
     <!-- Overriding color of tab counter icon in toolbar -->
     <color name="mozac_ui_tabcounter_default_tint">@color/icons</color>
 
+    <color name="pretty_background">#e1e1e1</color>
+    <color name="pretty_border">#d1d1d1</color>
+    <color name="text_color">#141414</color>
+    <color name="hint_color">#C8C8C8</color>
+
+
+    <array name="section_border">B1BCBE</array>
+
+    <!-- Primary text -->
+    <color name="fx_mobile_text_color_primary">@color/photonDarkGrey90</color>
+    <!-- Secondary text -->
+    <color name="fx_mobile_text_color_secondary">@color/photonDarkGrey05</color>
 </resources>
