--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,4 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="browser_toolbar_height">56dp</dimen>
+    <dimen name="section_corner">10dp</dimen>
+    <dimen name="et_text_size">14sp</dimen>
+    <dimen name="hint">14sp</dimen>
+    <dimen name="home_item_horizontal_margin">16dp</dimen>
+    <dimen name="top_sites_item_margin_bottom">12dp</dimen>
+
+
+    <dimen name="top_sites_text_margin_top">6dp</dimen>
+    <dimen name="top_sites_favicon_size">36dp</dimen>
+    <dimen name="top_sites_favicon_elevation">0dp</dimen>
+    <dimen name="top_sites_favicon_corner_size">4dp</dimen>
+
+
+    <dimen name="top_sites_card_size">60dp</dimen>
+    <dimen name="top_sites_card_margin_top">4dp</dimen>
+    <dimen name="top_sites_card_padding">12dp</dimen>
+    <dimen name="top_sites_card_elevation">6dp</dimen>
+    <dimen name="top_sites_card_radius">8dp</dimen>
+
 </resources>
