--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -28,7 +28,7 @@
     <color name="pretty_background">#e1e1e1</color>
     <color name="pretty_border">#d1d1d1</color>
     <color name="text_color">#141414</color>
-    <color name="hint_color">#C8C8C8</color>
+    <color name="hint_color">#535353</color>
 
 
     <array name="section_border">B1BCBE</array>
