--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -20,4 +20,10 @@
     <dimen name="top_sites_card_elevation">6dp</dimen>
     <dimen name="top_sites_card_radius">8dp</dimen>
 
+
+    <dimen name="banner_card_heigth">120dp</dimen>
+    <dimen name="banner_card_margin_top">4dp</dimen>
+    <dimen name="banner_card_padding">12dp</dimen>
+    <dimen name="banner_card_elevation">6dp</dimen>
+    <dimen name="banner_card_radius">8dp</dimen>
 </resources>
